--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -54,17 +54,28 @@
 		</td>
 		<td  align="center" width="50%">
 		</td></tr>
-
+<tr><td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/cppage'">CPP</button></div></td>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/cnpage'">C++</button></div></td></div></tr>
 <tr><td width="50%">
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;" onclick="document.location='/testpaper'">Python</button></div></td>
-<td  width="50%">
-	<div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"><a href = "/test1" style="color: white;text-decoration: none;">Dbms</a></button></td></div></tr>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/dbmspage'">DBMS</button></div></td></div></tr>
 	<tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;background-color: red;"onclick="document.location='/sub'">DS</button></div></td>
-<td  width="50%">
-	<div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: blue;margin-bottom: 30px;"><a href = "/test1" style="color: white;text-decoration: none;">ADS</a></button></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/cnpage'">DS</button></div></td>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/cnpage'">ADS</button></div></td></div></tr>
+	<tr><td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/cnpage'">CN</button></div></td>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/cnpage'">Java</button></div></td></div></tr>
 	</table></body></html>
