--- a/templates/testpaper.html
+++ b/templates/testpaper.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Radio Buttons</title>
+	<title>Python Test paper</title>
 	<style type="text/css">
 	body{
 		background-color: white;
@@ -62,7 +62,7 @@
 <table width="100%" >
 		<tr><td align="center" width="100%" >
 {% if item == 0 %}
-<label> What is the maximum possible length of an identifier?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;"> What is the maximum possible length of an identifier?</label><br>
 	<input type="radio" name="options0" value="a">16<br>
 	<input type="radio" name="options0" value="b">32<br>
 	<input type="radio" name="options0" value="c">64<br>
@@ -70,7 +70,7 @@
 <tr><td height="15px"></td></tr>
 {% elif item == 1 %}
 		<tr><td align="center" width="100%">
-<label> Who developed the Python language?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;"> Who developed the Python language?</label><br>
 	<input type="radio" name="options1" value="a">Zim Den<br>
 	<input type="radio" name="options1" value="b">Guido van Rossum
 <br>
@@ -83,7 +83,7 @@
 <tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item ==2 %}
-<label>In which year was the Python language developed?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">In which year was the Python language developed?</label><br>
 	<input type="radio" name="options2" value="a">1995<br>
 	<input type="radio" name="options2" value="b">1972<br>
 	<input type="radio" name="options2" value="c">1981<br>
@@ -91,7 +91,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 3 %}
-<label>In which language is Python written?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">In which language is Python written?</label><br>
 	<input type="radio" name="options3" value="a">English<br>
 	<input type="radio" name="options3" value="b">PHP<br>
 	<input type="radio" name="options3" value="c">C<br>
@@ -99,7 +99,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 4 %}
-<label>Which one of the following is the correct extension of the Python file?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">Which one of the following is the correct extension of the Python file?</label><br>
 	<input type="radio" name="options4" value="a">.py<br>
 	<input type="radio" name="options4" value="b">.txt<br>
 	<input type="radio" name="options4" value="c">.html<br>
@@ -107,7 +107,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 5 %}
-<label>In which year was the Python 3.0 version developed?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">In which year was the Python 3.0 version developed?</label><br>
 	<input type="radio" name="options5" value="a">2004<br>
 	<input type="radio" name="options5" value="b">2008<br>
 	<input type="radio" name="options5" value="c">2012<br>
@@ -115,7 +115,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 6 %}
-<label>What do we use to define a block of code in Python language?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">What do we use to define a block of code in Python language?</label><br>
 	<input type="radio" name="options6" value="a">key<br>
 	<input type="radio" name="options6" value="b">brackets<br>
 	<input type="radio" name="options6" value="c">identation<br>
@@ -123,7 +123,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 7 %}
-<label>Which character is used in Python to make a single line comment?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">Which character is used in Python to make a single line comment?</label><br>
 	<input type="radio" name="options7" value="a">/<br>
 	<input type="radio" name="options7" value="b">//<br>
 	<input type="radio" name="options7" value="c">#<br>
@@ -131,7 +131,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 8 %}
-<label>What is the method inside the class in python language?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">What is the method inside the class in python language?</label><br>
 	<input type="radio" name="options8" value="a">object<br>
 	<input type="radio" name="options8" value="b">function<br>
 	<input type="radio" name="options8" value="c">attribute<br>
@@ -139,7 +139,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 9 %}
-<label>Which of the following statements is correct regarding the object-oriented programming concept in Python?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;">Which of the following statements is correct regarding the object-oriented programming concept in Python?</label><br>
 	<input type="radio" name="options9" value="a">Classes are real-world entities while objects are not real<br>
 	<input type="radio" name="options9" value="b">Objects are real-world entities while classes are not real<br>
 	<input type="radio" name="options9" value="c">Both objects and classes are real-world entities<br>
@@ -147,7 +147,7 @@
 	<tr><td height="15px"></td></tr>
 <tr><td align="center" width="100%">
 {% elif item == 10 %}
-<label> Which of the following is not a keyword in Python language?</label><br>
+<label style="background-color: #0D6EFD;width: 100%;padding: 20px; color: white;"> Which of the following is not a keyword in Python language?</label><br>
 	<input type="radio" name="options10" value="a">val<br>
 	<input type="radio" name="options10" value="b">rise<br>
 	<input type="radio" name="options10" value="c">try<br>
