--- a/templates/test1.html
+++ b/templates/test1.html
@@ -57,16 +57,16 @@
 	</tr>
 	<tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;">Civil</button></div></td>
-<td  width="50%">
-	<div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: green;margin-bottom: 30px;"><a href = "/test1" style="color: white;text-decoration: none;">Mech</a></button></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/test1'">Civil</button></div></td>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/test1'">Mech</button></div></td></tr>
 	<tr><td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;background-color: red;"onclick="document.location='/sub'">CSE</button></div></td>
-<td  width="50%">
-	<div class="nav justify-content-center">
-	<button type="button" class="btn btn-primary" style="width: 100px; background-color: blue;margin-bottom: 30px;"><a href = "/test1" style="color: white;text-decoration: none;">ECE</a></button></td></div></tr>
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/sub'">CSE</button></div></td>
+<td width="50%">
+		<div class="nav justify-content-center">
+<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/test1'">Ece</button></div></td></tr>
 </table>
 </body>
 </html>
