--- a/templates/resu.html
+++ b/templates/resu.html
@@ -51,7 +51,7 @@
               </button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/test1">Tests</a>
+    <a class="nav-link" href="/firebase">Mid Marks</a>
   </li>
 </ul></ul>
 	</td></tr>
