--- a/templates/dbmspaper.html
+++ b/templates/dbmspaper.html
@@ -37,7 +37,7 @@
     <a class="nav-link" href="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/resu">Results</a>
+    <a class="nav-link" href="/firebase">Mid Marks</a>
   </li>
   <li class="nav-item">
     <button type="button" class="btn btn-primary">
