--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -13,6 +13,6 @@
 <tr><td align="center">
 <button class = 'btn btn-primary' style="width: 200px;"><a href = "/check" style="color:white;text-decoration: none;">View Marks</a></button></td></tr>
 <tr><td align="center">
-<button class = 'btn btn-danger' style="width: 200px;"><a href = "/login" style="color:white;text-decoration: none;">Delete Marks</a></button></td></tr></table>
+<button class = 'btn btn-danger' style="width: 200px;"><a href = "/delete" style="color:white;text-decoration: none;">Delete Marks</a></button></td></tr></table>
 </body>
 </html>
