--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -2,6 +2,253 @@
 <html>
 <head>
 	<title>Database testing</title>
+	<style type="text/css">
+	body{
+		background-color: white;
+	}
+	.logo img{
+		width:80%;
+		height:120px;
+	}
+
+ .heading{
+		font-family: cursive;
+		background-color: #031458;
+		  color:white;
+		  
+		   
+		    
+	}
+
+	#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  
+  cursor: pointer;
+  padding: 15px;
+  
+  
+}
+
+#myBtn:hover {
+  background-color: transparent;
+}
+
+
+@media screen and (max-width: 1060px) {
+.logo img{
+	width: 80%;
+	height: 120px;
+
+}
+.heading{
+	color:white;
+	height: 120px;
+}
+}
+@media screen and (max-width: 1018px) {
+	.logo img{
+	width: 80%;
+	height: 120px;
+
+}
+.heading{
+	color:white;
+	padding-top: 10px;
+	
+	
+}
+
+.heading1 h1{
+	width: 100%;
+	height: 100%;
+	font-size: 28px;
+	
+}
+.image2 img{
+	
+
+	width: 100%;
+	height: 100%;
+}
+
+marquee img{
+	height: 200px;
+	width: 200px;
+}
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 80px;
+  width: 80px;
+}
+}
+
+@media screen and (max-width: 768px) {
+	.logo img{
+	width: 80%;
+	height: 120px;
+
+}
+.heading{
+	color:white;
+	height: 120px;
+	
+}
+
+.heading1 h1{
+	width: 100%;
+	height: 100%;
+	font-size: 25px;
+	
+}
+.image2 img{
+	
+
+	width: 100%;
+	height: 100%;
+}
+
+marquee img{
+	height: 160px;
+	width: 160px;
+}
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 70px;
+  width: 70px;
+}	
+}
+@media screen and (max-width: 668px) {
+	.logo img{
+	width: 80%;
+	height: 120px;
+
+}
+ .heading{
+	color:white;
+	height: 120px;
+	text-align: center;
+}
+
+.heading1 h1{
+	width: 100%;
+	height: 100%;
+	font-size: 23px;
+	
+}
+.image2 img{
+	
+
+	width: 100%;
+	height: 100%;
+}
+
+marquee img{
+	height: 140px;
+	width: 140px;
+}
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 60px;
+  width: 60px;
+}	
+}
+@media screen and (max-width: 568px) {
+	.logo img{
+	width: 90%;
+	height: 100px;
+	margin-left:0px; 
+
+}
+.heading{
+	width:100%;
+	height: 100px;
+}
+.heading h1{
+	color:white;
+	font-size: 25px;	
+	text-align: center;
+
+}
+.heading1 h1{
+	width: 100%;
+	height: 100%;
+	font-size: 20px;
+	
+}
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 55px;
+  width: 55px;
+}	
+.image2 img{
+	
+
+	width: 100%;
+	height: 100%;
+}
+
+
+marquee img{
+	height: 120px;
+	width: 120px;
+}
+}
+@media screen and (max-width: 548px) {
+	.logo img{
+		width: 80%
+		height: 100px;
+	margin-left:0px; 
+
+}
+.heading{
+	width:100%;
+	height: 100%;
+
+	
+}
+.heading h1{
+	color:white;
+	
+	
+}
+.heading1 h1{
+	width: 100%;
+	height: 100%;
+	font-size: 20px;
+	
+}
+.image2 img{
+	
+
+	width: 100%;
+	height: 100%;
+}
+
+marquee img{
+	height: 100px;
+	width: 100px;
+}
+
+#myBtn {
+	bottom: 20px;
+  right: 10px;
+  height: 50px;
+  width: 50px;
+}	
+
+}
+
+
+
+</style>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
