--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -254,7 +254,7 @@ marquee img{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </head>
 <body>
-	<table width="100%" style="margin-top: 120px;">
+	<table width="100%" >
 		<tr>
 		<td align="center" width="100%">
 			<div class = "logo">
