--- a/templates/firebase.html
+++ b/templates/firebase.html
@@ -3,9 +3,15 @@
 <head>
 	<title>Database testing</title>
 	<style type="text/css">
-	body{
-		background-color: white;
-	}
+	body > #bg{
+	height: 100%;
+	width: 100%;
+	background: rgb(255,231,0);
+background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%, rgba(255,231,0,1) 100%);
+	clip-path: polygon(100% 0, 100% 23%, 0 23%, 0 0);
+	position: absolute;
+	z-index: -1;
+}
 	.logo img{
 		width:80%;
 		height:120px;
@@ -253,7 +259,7 @@ marquee img{
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </head>
-<body>
+	<body><div id = "bg"></div>
 	<table width="100%" >
 		<tr>
 		<td align="center" width="100%">
