--- a/templates/home.html
+++ b/templates/home.html
@@ -500,7 +500,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 34%, rgba(255,235,42,1) 1
 <tr><td colspan="2" style="background-image: url('{{url_for('static',filename = 'images/akrg.jpg')}}') ;background-repeat: no-repeat;
 background-size: cover;background-attachment: fixed; background-position: center;  box-shadow: 0 0 500px rgba(0,0,0,0.9) inset;" height="500px" ><h1 style="color: white; padding-top: 200px; font-family: 'Francois One', sans-serif;">Our College</h1><h1 style="font-family: 'Francois One', sans-serif; color:white;">AKRG COLLEGE OF ENGINEERING & TECHNOLOGY</h1></td></tr>
 <tr><td colspan="2" width="100%" align="center">
-<footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2k17 - 2021)</footer></td></tr>
+<footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2017 - 2021)</footer></td></tr>
 </table><div id = "bott"></div>
 </body>
 </html>
