--- a/templates/dbms1.html
+++ b/templates/dbms1.html
@@ -131,7 +131,7 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 }
 </style>
 </head>
-	<body><div class = "id"></div>
+	<body><div id = "bg"></div>
 <table width="100%">
 	<tr>
 		<td align="center">
