--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Radio Buttons</title>
+	<title>subjects</title>
 	<style type="text/css">
 		body > #bg{
 	height: 100%;
